[metadata]
name = hab
version = file: hab/version.txt
description = An environment configuration and launcher system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blurstudio/hab
author = Blur Studio
author_email = opensource@blur.com
license = LGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
platform = any
project_urls =
    Source = https://github.com/blurstudio/python-example
    Tracker = https://github.com/blurstudio/python-example/issues

[options]
packages = find:
install_requires =
    anytree
    click>=7.1.2
    colorama
    future>=0.18.2
    packaging>=20.0
    setuptools-scm[toml]>=4
python_requires = >=3.6
include_package_data = True
scripts =
    bin/hab.bat
    bin/hab.ps1
    bin/hab
setup_requires =
    setuptools
    wheel

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    black
    covdefaults
    coverage
    flake8
    flake8-bugbear
    pep8-naming
    pytest
    tox
json5 =
    pyjson5

[options.package_data]
* = version.txt

[flake8]
select = B, C, E, F, N, W, B9
extend-ignore =
    E203,
    E501,
    E722
max-line-length = 88
exclude =
    *.egg-info
    *.pyc
    .cache
    .eggs
    .git
    .tox
    __pycache__
    build
    dist
