[metadata]
name = hab
version = file: hab/version.py
description = An environment configuration and launcher system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blurstudio/hab
author = Blur Studio
author_email = opensource@blur.com
license = LGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
platform = any
project_urls =
    Source = https://github.com/blurstudio/hab
    Tracker = https://github.com/blurstudio/hab/issues

[options]
packages = find:
install_requires =
    Jinja2>=2.10.1
    MarkupSafe>=0.23
    Pygments
    anytree
    click>=7.1.2
    colorama
    future>=0.18.2
    importlib-metadata
    packaging>=20.0
    setuptools-scm[toml]>=4
python_requires = >=3.6
include_package_data = True
scripts =
    bin/.hab-complete.bash
    bin/hab.bat
    bin/hab.ps1
    bin/hab

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    black==22.12.0
    covdefaults
    coverage
    flake8==5.0.4
    flake8-bugbear==22.12.6
    isort
    pep8-naming==0.13.3
    pytest
    tox
json5 =
    pyjson5

[flake8]
select = B, C, E, F, N, W, B9
extend-ignore =
    E203,
    E501,
    E722,
    W503,
max-line-length = 88
exclude =
    *.egg-info
    *.pyc
    .cache
    .eggs
    .git
    .tox
    __pycache__
    build
    dist
